# radcpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate_project_files.ps1  install_vcpkg_packages.ps1  setup.ps1
imported/: get_prebuilt_libraries.ps1
imported/imgui/: CMakeLists.txt  imconfig.h
imported/spvgen/: .gitignore  CMakeLists.txt  build.ps1
imported/sqlite/: CMakeLists.txt
imported/stb/: CMakeLists.txt
libs/DirectMedia/: CMakeLists.txt
libs/DirectMedia/DirectMedia/Core/: Application.cpp  Application.h  EventHandler.cpp  EventHandler.h  PerfCounter.cpp  PerfCounter.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Window.cpp  Window.h
libs/DirectMedia/DirectMedia/Gui/: GuiContext.cpp  GuiContext.h  NativeFileDialog.cpp  NativeFileDialog.h
libs/DirectMedia/rad/DirectMedia/: Application.cpp  Application.h  Core.h  EventHandler.h  GuiContext.cpp  GuiContext.h  PerfCounter.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Window.cpp  Window.h
libs/DirectMedia/rad/DirectMedia/Core/: Application.h  EventHandler.cpp  EventHandler.h  PerfCounter.cpp  PerfCounter.h  Surface.cpp  Surface.h  Timer.cpp  Window.cpp
libs/DirectMedia/rad/DirectMedia/Gui/: GuiContext.cpp  GuiContext.h  NativeFileDialog.cpp  NativeFileDialog.h
libs/DirectMedia/rad/DirectMedia/Media/: Codec.cpp  Codec.h
libs/Rapid/: CMakeLists.txt
libs/Rapid/rad/Rapid/: JsonDoc.cpp  JsonDoc.h  JsonValue.cpp  JsonValue.h
libs/VulkanCore/: CMakeLists.txt  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.h  VulkanCommon.cpp  VulkanCommon.h  VulkanDescriptorSet.h  VulkanEvent.h  VulkanFormat.cpp  VulkanFormat.h  VulkanFramebuffer.h  VulkanImage.h  VulkanInstance.h  VulkanObject.cpp  VulkanPipeline.h  VulkanShader.cpp  VulkanSwapchain.h
libs/VulkanCore/helpers/: vk_format_utils.cpp
libs/VulkanCore/rad/: VulkanCore.h
libs/VulkanCore/rad/VulkanCore/: VulkanBuffer.cpp  VulkanCommandPool.cpp  VulkanCommon.cpp  VulkanCommon.h  VulkanDescriptorPool.cpp  VulkanDevice.cpp  VulkanImage.cpp  VulkanInstance.cpp  VulkanPhysicalDevice.cpp  VulkanQueue.h  VulkanSampler.h  VulkanShader.h
libs/VulkanEngine/: CMakeLists.txt
libs/VulkanEngine/VulkanEngine/Core/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.h  VulkanCommon.cpp  VulkanCommon.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.cpp  VulkanDevice.h  VulkanEvent.cpp  VulkanEvent.h  VulkanFence.h  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanObject.cpp  VulkanObject.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineCreateInfo.cpp  VulkanPipelineCreateInfo.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSampler.h  VulkanSemaphore.cpp  VulkanSemaphore.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h
libs/VulkanEngine/rad/VulkanEngine/: 3DMath.cpp  3DMath.h  Core.h  VulkanWindow.h
libs/VulkanEngine/rad/VulkanEngine/Core/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommon.cpp  VulkanCommon.h  VulkanDescriptorPool.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.h  VulkanFormat.cpp  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanMath.cpp  VulkanMath.h  VulkanObject.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipeline.cpp  VulkanRenderPass.h  VulkanSemaphore.h  VulkanShader.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp  VulkanTexture.h
libs/VulkanEngine/rad/VulkanEngine/Framework/: VulkanFrame.cpp  VulkanFrame.h  VulkanGuiContext.cpp  VulkanGuiContext.h  VulkanWindow.cpp  VulkanWindow.h
libs/VulkanEngine/rad/VulkanEngine/Gui/: VulkanWindow.h
libs/VulkanEngine/rad/VulkanEngine/Rendering/: VulkanCamera.cpp  VulkanCamera.h  VulkanLight.cpp  VulkanLight.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanMesh.cpp  VulkanMesh.h  VulkanScene.cpp  VulkanScene.h  VulkanSceneNode.cpp  VulkanSceneNode.h  VulkanTexture.cpp  VulkanTexture.h
libs/VulkanEngine/rad/VulkanEngine/Shaders/Common/: Hash.h
rad/: CMakeLists.txt
rad/Container/: Span.h
rad/Core/: 3D.cpp  3D.h  3DMath.cpp  3DMath.h  BFloat16.cpp  BFloat16.h  Compare.h  File.cpp  Flags.h  Float.cpp  Float.h  Float16Compressor.h  Global.cpp  Global.h  Integer.cpp  Integer.h  Logging.cpp  Logging.h  Math.cpp  Math.h  Memory.cpp  Memory.h  Numeric.h  OS.cpp  OS.h  RefCounted.h  Span.h  String.cpp  String.h  Time.cpp  Time.h  TypeTraits.h
rad/IO/: File.cpp  File.h  Json.cpp  Json.h  JsonDoc.cpp  JsonDoc.h  JsonValue.cpp  JsonValue.h  Logging.cpp  Logging.h  PropertyTree.cpp  PropertyTree.h
rad/Math/: 3DLinearAlgebra.cpp  3DLinearAlgebra.h  Math.cpp
rad/System/: FileSystem.cpp  FileSystem.h  OS.cpp  OS.h
samples/Painter/: CMakeLists.txt  Painter.cpp  Painter.h  main.cpp
sp1/: CMakeLists.txt  Test.Core.Flags.cpp  Test.Core.Float.cpp  Test.Core.Integer.cpp  Test.Core.Math.cpp  Test.Core.RefCounted.cpp  Test.Core.Span.cpp  Test.Core.String.cpp  Test.Core.TypeTraits.cpp  Test.IO.File.cpp  Test.IO.Json.cpp  main.cpp  test.json
test/: CMakeLists.txt  main.cpp
test/Core/: FlagsTest.cpp  FloatTest.cpp  IntegerTest.cpp  SpanTest.cpp
test/IO/: JsonTest.cpp
test/data/: menu.json
tests/: CMakeLists.txt  HelloWorld.cpp  TestInteger.cpp
tests/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  TestFlags.cpp  TestFloat.cpp  TestJson.cpp  prize.json
tests/WindowTest/: CMakeLists.txt  WindowTest.cpp  WindowTest.h  main.cpp
